--- a/packages/wix-style-react-app-cra/package.json
+++ b/packages/wix-style-react-app-cra/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "wix-style-react": "^9.152.0"
+    "wix-style-react": "^9.152.0",
+    "wix-ui-icons-common": "^2.0.344"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1"
   }
 }
