--- a/.github/workflows/github-actions-main.yml
+++ b/.github/workflows/github-actions-main.yml
@@ -3,6 +3,11 @@ on:
   push:
     branches:
       - '**'   
+  pull_request:
+    branches:
+      - '**'   
+ 
+
 
 jobs:
   Explore-GitHub-Actions:
