--- a/.github/workflows/github-actions-main.yml
+++ b/.github/workflows/github-actions-main.yml
@@ -1,8 +1,10 @@
-name: GitHub Actions Demo
+name: Design Systems Examples Build
 on:
   push:
     branches:
       - '**'    
+  schedule:
+    - cron: '0 20 * * *'
 
 jobs:
   build:
