--- a/packages/wix-style-react-app-csa/package.json
+++ b/packages/wix-style-react-app-csa/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "wix-style-react-app-2",
+  "name": "wix-style-react-app-csa",
   "version": "1.0.0",
   "description": "Stylable App",
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "prebuild": "npm run clean",
+    "prebuild": "yarn run clean",
     "build": "webpack --mode production --no-devtool",
     "start": "webpack serve --open",
     "serve": "serve ./dist",
@@ -19,9 +19,16 @@
   "private": true,
   "dependencies": {
     "@stylable/runtime": "^4.6.0",
+    "@types/react-router-dom": "^5.1.8",
+    "css-loader": "^6.2.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1",
     "wix-style-react": "^9.152.0"
   },
   "devDependencies": {
@@ -29,25 +36,18 @@
     "@stylable/webpack-plugin": "^4.6.0",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
-    "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-stylable": "^4.6.0",
     "html-webpack-plugin": "^5.3.2",
-    "node-sass": "^6.0.1",
-    "resolve-url-loader": "^4.0.0",
     "rimraf": "^3.0.2",
-    "sass-loader": "^12.1.0",
     "serve": "^12.0.0",
-    "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
-    "url-loader": "^4.1.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
