--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "lerna bootstrap --no-hoist",
-    "start:csa": "lerna exec --scope wix-style-react-app-csa start"
+    "start:csa": "lerna exec --scope wix-style-react-app-csa yarn start"
   },
   "repository": {
     "type": "git",
