--- a/.github/workflows/github-actions-main.yml
+++ b/.github/workflows/github-actions-main.yml
@@ -24,6 +24,5 @@ jobs:
 
     - name: Build
       run: |
-        yarn
-        yarn postinstall     
-        lerna run build
+        yarn    
+        npx lerna run build
