--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "lerna bootstrap --no-hoist --no-ci",
     "start:csa": "lerna exec --scope wix-style-react-app-csa yarn start"
   },
   "repository": {
