--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,14 +32,14 @@ jobs:
     # step 3 publish
     - name: Publish
       id: publish
-      if: job.steps.build.status == 'success'
+      if: steps.build.outcome == 'success'
       run: |
         curl -X POST https://api.vercel.com/v1/integrations/deploy/prj_1SMQtFZyCW68J9WaxFaHmV5c2cv0/rcCeSGIryP
       continue-on-error: true
       
     # step 4 (optional upon errors) report on Slack
     - name: Slack notification upon failure
-      if: job.steps.build.status != 'success'
+      if: steps.build.outcome != 'success'
       uses: rtCamp/action-slack-notify@v2
       env:
         SLACK_COLOR: '#FF0000'
@@ -50,7 +50,7 @@ jobs:
 
     # step 5 (optional upon errors) exit with error code
     - name: Failure status
-      if: job.steps.build.status != 'success'
+      if: steps.build.outcome != 'success'
       run: exit 1
 
         
