--- a/packages/wix-style-react-webpack/package.json
+++ b/packages/wix-style-react-webpack/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "typecheck": "tsc --noEmit",
     "build": "webpack --mode production --no-devtool",
     "start": "webpack serve --open"
   },
@@ -12,8 +14,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
@@ -22,16 +22,11 @@
     "react-dom": "^17.0.2",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.1.0",
-    "stylable": "^5.4.11",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
-    "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0"
-  },
-  "devDependencies": {
-    "@stylable/webpack-plugin": "^4.6.0"
   }
 }
