--- a/packages/wix-style-react-webpack/package.json
+++ b/packages/wix-style-react-webpack/package.json
@@ -12,21 +12,26 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "css-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "ts-loader": "^9.2.5",
+    "style-loader": "^3.2.1"
+  },
+  "devDependencies": {
     "url-loader": "^4.1.1",
+    "@stylable/core": "^4.6.0",
+    "@stylable/webpack-plugin": "^4.6.0",
+    "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.5",
+    "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "wix-style-react": "9.151.0"
   }
 }
