--- a/packages/wix-style-react-app-csa/package.json
+++ b/packages/wix-style-react-app-csa/package.json
@@ -18,24 +18,19 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@stylable/runtime": "^4.6.0",
-    "@types/react-router-dom": "^5.1.8",
-    "css-loader": "^6.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
     "react-router-dom": "^5.2.0",
-    "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
     "url-loader": "^4.1.1",
-    "wix-style-react": "^9.158.0"
+    "wix-style-react": "https://cdn.dev.wixpress.com/wix-style-react/29f48bc60c0a2b450e1fb16f8bd872e8139425cc0f8f268f8fc840d3.tar.gz"
   },
   "devDependencies": {
+    "@stylable/runtime": "^4.6.0",
     "@stylable/core": "^4.6.0",
     "@stylable/webpack-plugin": "^4.6.0",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
