--- a/packages/wix-style-react-webpack/package.json
+++ b/packages/wix-style-react-webpack/package.json
@@ -14,13 +14,11 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "css-loader": "^6.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "wix-style-react": "https://cdn.dev.wixpress.com/wix-style-react/29f48bc60c0a2b450e1fb16f8bd872e8139425cc0f8f268f8fc840d3.tar.gz"
   },
   "devDependencies": {
     "url-loader": "^4.1.1",
@@ -31,7 +29,6 @@
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "wix-style-react": "^9.158.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
