--- a/packages/wix-style-react-app-csa/package.json
+++ b/packages/wix-style-react-app-csa/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.0.2",
     "react-router-dom": "^5.2.0",
     "url-loader": "^4.1.1",
-    "wix-style-react": "https://cdn.dev.wixpress.com/wix-style-react/29f48bc60c0a2b450e1fb16f8bd872e8139425cc0f8f268f8fc840d3.tar.gz"
+    "wix-style-react": "^10.0.0"
   },
   "devDependencies": {
     "@stylable/runtime": "^4.6.0",
