--- a/packages/wix-style-react-webpack/package.json
+++ b/packages/wix-style-react-webpack/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.2.0",
     "resolve-url-loader": "^4.0.0",
-    "wix-style-react": "https://cdn.dev.wixpress.com/wix-style-react/29f48bc60c0a2b450e1fb16f8bd872e8139425cc0f8f268f8fc840d3.tar.gz"
+    "wix-style-react": "^10.0.0"
   },
   "devDependencies": {
     "url-loader": "^4.1.1",
