--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "lerna bootstrap --no-hoist --no-ci",
     "start:wix-style-react-app-csa": "lerna exec --scope wix-style-react-app-csa yarn start",
-    "start:wix-style-react-webpack": "lerna exec --scope wix-style-react-webpack yarn start",
-    "start:wix-style-react-nextjs": "lerna exec --scope wix-style-react-nextjs yarn start"
+    "start:wix-style-react-webpack": "lerna exec --scope wix-style-react-webpack yarn start"
   },
   "repository": {
     "type": "git",
