Upgrade lerna and build package-locks with latest wsr

--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-    "packages": [
-      "packages/*"
-    ],
-    "hoist": false,
-    "version": "0.0.0"
-  }
+  "packages": ["packages/*"],
+  "hoist": false,
+  "version": "0.0.0"
+}
