--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "lerna bootstrap --no-hoist --no-ci",
-    "start:wix-style-react-app-csa": "lerna exec --scope wix-style-react-app-csa yarn start",
-    "start:wix-style-react-webpack": "lerna exec --scope wix-style-react-webpack yarn start"
+    "build": "lerna run build",
+    "start:wix-style-react-app-csa": "lerna exec --scope wix-style-react-app-csa npm run start",
+    "start:wix-style-react-webpack": "lerna exec --scope wix-style-react-webpack npm run start"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,7 @@
     "url": "https://github.com/wix-incubator/design-systems-examples/issues"
   },
   "homepage": "https://github.com/wix-incubator/design-systems-examples#readme",
-  "workspaces": {
-    "packages": [
-      "packages/*"
-    ]
-  },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^5.4.2"
   }
 }
