--- a/packages/wix-style-react-webpack/package.json
+++ b/packages/wix-style-react-webpack/package.json
@@ -14,24 +14,21 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
-    "css-loader": "^6.2.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^5.2.0",
     "resolve-url-loader": "^4.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1"
+    "wix-style-react": "^10.49.0"
   },
   "devDependencies": {
     "url-loader": "^4.1.1",
-    "@stylable/core": "^4.6.0",
-    "@stylable/webpack-plugin": "^4.6.0",
+    "@stylable/core": "^5.1.0",
+    "@stylable/webpack-plugin": "^5.1.0",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.5",
     "typescript": "^4.3.5",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.0.0",
-    "wix-style-react": "^9.158.0"
+    "webpack-dev-server": "^4.0.0"
   }
 }
